--- a/src/index.css
+++ b/src/index.css
@@ -117,3 +117,19 @@
     @apply bg-background text-foreground;
   }
 }
+.scrollbar{
+  scroll-behavior: smooth;
+}
+.scrollbar::-webkit-scrollbar {
+  width: 3px;
+  border-radius: 20px;
+  transition: all 1s linear;
+}
+.scrollbar::-webkit-scrollbar-thumb {
+  cursor: pointer;
+  background: var(--primary-foreground);
+}
+.scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+  cursor: pointer;
+}
